<resources>
    <string name="app_name">Crypto Currency</string>
    <string name="to">to</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="select_crypto">Please Select Crypto Currency</string>
    <string name="selec_currency">Please Select Currency</string>
    <string name="please_add_your_currency_pair">Add Your Currency Pair</string>
    <string name="cant_find_pair">Can`t find Pair</string>
    <string name="duplicate_pair">You already have this pair.</string>
    <string name="does_have_top_list">This pair does not have top list.</string>
    <string name="delete">Delete</string>
    <string name="delete_pair">Are you sure, you want delete this pair?</string>
    <string name="exchange">Exchange</string>
    <string name="volume24h">Volume24h</string>
    <string name="volume24to">Volume24hTo</string>
</resources>
