<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_5sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exchange"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange" />

    <TextView
        android:id="@+id/volume24h"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume24h"
        android:layout_marginTop="@dimen/_5sdp"
        />

    <TextView
        android:id="@+id/volume24to"
        android:textSize="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume24to" />
</LinearLayout>